--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ PyQt5_sip==12.17.0
 PyQt6==6.9.0
 PyQt6-Qt6==6.9.0
 PyQt6_sip==13.10.0
+PySocks==1.7.1
 rsa==4.9.1
 Telethon==1.39.0
 TgCrypto==1.2.5
